# py_executable

./: .gitignore  README.md  build_exe_mac.sh  build_exe_windows.bat  pyproject.toml
src/py_executable/: main.py
tests/: test_main.py
