[tool.poetry]
name = "py-executable"
version = "0.1.0"
description = ""
authors = ["Skekh.Akter <skekh.akter@eneco.com>"]
readme = "README.md"
packages = [{include = "py_executable", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
click = "^8.1.7"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
